Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -308,7 +308,7 @@ Instead of scattering off the nucleus, neutrinos may also scatter off the electr
 \begin{equation}
     \nu_l + \electron \rightarrow \nu_l + \electron.
 \end{equation}
-This is an elastic process that has both a \gls{cc} and \gls{nc} component, however, for typical neutrino energies, only \nue\gls{cc} interactions are kinematically allowed \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
+This is an elastic process that has indistinguishable CC and NC components for \nue interactions, whereas only a NC component is allowed for \numu and \nutau \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
 %https://feynman.aivazis.com/
 \newpage
@@ -547,11 +547,10 @@ where the second step follows from \EquationRef{eqn:chiral identity}. Naturally,
 \begin{comment}
 Since left handed particles form a doublet under \SUgroup2 they have non-zero weak isospin and because right handed particles are a singlet under \SUgroup2, their weak isospin is equal to zero. Therefore, in order to get a term where the isospin sums to zero, which is a requirement for the Lagrangian to be gauge invariant, an additional field is needed that is also a doublet under \SUgroup2. This field is a result of the neutral Higgs boson, $\phi^0$, and the Dirac mass is given by
 \end{comment}
-In order for the mass terms to actually acquire mass, the \gls{sm} requires two scalar fields to be introduced. These fields are provided by the Higgs mechanism and allow for spontaneous symmetry breaking \cite{peskin_and_schroeder}. The Dirac mass is given by, 
-\begin{equation}
+Yukawa coupling can be introduced between the lepton doublets and the Higgs doublet include right handed neutrinos. After spontaneous symmetry breaking, this gives rise to a Dirac mass term whch is given by, \begin{equation}
     {m_D}_i = \frac{y_iv}{\sqrt{2}},
 \end{equation}
-where \textit{y} is the Yukawa coupling and \textit{v} gives the vacuum expectation value from the Higgs field ($v \simeq$ 246 GeV). A concern with generating neutrino masses in this way is the required size of the Yukawa coupling. To generate a mass of say 0.1 eV, the Yukawa coupling would need to be very small ($\sim$6 orders of magnitude less than that of the electron). This small number is sometimes considered unnatural and provides motivation to search for alternative mass mechanisms to explain the neutrino masses \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
+where \textit{y} is the Yukawa coupling and \textit{v} gives the vacuum expectation value from the Higgs field ($v \simeq$ 246 GeV) \cite{peskin_and_schroeder}. A concern with generating neutrino masses in this way is the required size of the Yukawa coupling. To generate a mass of say 0.1 eV, the Yukawa coupling would need to be very small ($\sim$6 orders of magnitude less than that of the electron). This small number is sometimes considered unnatural and provides motivation to search for alternative mass mechanisms to explain the neutrino masses \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
 \subsubsection{Majorana Mass}
 To generate mass without the requirement of a right-handed field, it is required that the neutrino be a Majorana particle. It may be shown that 
