--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -1,7 +1,9 @@
 \chapter{Electromagnetic Shower Energy Reconstruction in SBND}
 \label{chap:Energy_Reco}
 
-The \gls{em} shower energy is an important quantity that is used in a number of areas, especially in the context of a \nue analysis. One of the primary uses is in calculating the reconstructed electron neutrino energy, which is a key component of neutrino oscillations since the oscillation probability depends on $\frac{L}{E}$. The neutrino energy is usually found by summing up the energy of all the outgoing products of a neutrino interaction to which (for \nue \gls{ccqe} interactions) the shower energy is expected to make the dominant contribution \cite{neutrino_energy_reconstruction}. Another use is in the \nue event selection (which is detailed in \SectionRef{sec:nue_selection}) where a direct cut based on the shower energy is applied to the events.
+The \gls{em} shower energy is an important quantity that is used in a number of areas, especially in the context of a \nue analysis. One of the primary uses is in calculating the reconstructed electron neutrino energy, which is a key component of neutrino oscillations since the oscillation probability depends on $\frac{L}{E}$. The neutrino energy is usually found by summing up the energy of all the outgoing products of a neutrino interaction to which (for \nue \gls{ccqe} interactions) the shower energy is expected to make the dominant contribution \cite{neutrino_energy_reconstruction}. 
+
+This chapter covers the basics of event simulation and reconstruction and then goes onto discuss the three currently available \gls{em} shower reconstruction algorithms available for use in \gls{sbnd}. The performance of each algorithm is assessed by comparing with truth information. The reconstruction is validated for both electron and photon showers as well investigating the impact of the shower energy and angle on the reconstruction performance. 
 
 \section{Event Simulation and Reconstruction}\label{sec:Event Production and Reconstruction}
 
@@ -16,7 +18,7 @@ Reconstructed quantities are the main focus of this chapter and these are typica
     \item The lineage of the particles is identified and the particles are classified as either track- or shower-like.
 \end{enumerate}
 
-A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in long waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. These long waveforms may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a long waveform with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This long waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
+A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. In such cases, the signal above threshold may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a long waveform with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This long waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
 
 \begin{figure}[h!]
     \centering
@@ -39,7 +41,7 @@ Once the charge of a hit has been determined, the final steps which involve conv
 \begin{equation}\label{eqn:ModBox}
     \frac{dE}{dx} = \frac{\exp{(\frac{\beta}{\rho \mathcal{E}} W_{ion}.\frac{dQ}{dx}}) - \alpha}{\frac{\beta}{\rho \mathcal{E}}},
 \end{equation}
-where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. The recombination correction, \textit{R}, is given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$.
+where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV/\electron which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. The recombination correction, \textit{R}, is given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$.
 
 
 Since the recombination model is $\frac{dE}{dx}$ dependent, an accurate path length, \textit{dx}, is needed which requires 3D reconstruction of the direction. Because a shower is treated as a single object, which means the trajectory of constituent components are not tracked, it is therefore not straightforward to directly correct for the recombination effect \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below: 1) assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
